<resources>
    <string name="app_name">Portal Educando</string>
    <string name="sub_titulo">Educação de Qualidade</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="info_conectado">Permanecer Conectado</string>
    <string name="hint_login">portaleducando@email.com</string>
    <string name="sair">Sair</string>
    <string name="peril">Perfil</string>
    <string name="sobre">Sobre</string>
    <string name="configuracao">Configuração</string>
    <string name="ajuda">Ajuda</string>
    <string name="quiz">Quiz</string>
    <string name="contatenos">Contatenos</string>
    <string name="nome_aluno">Nome:</string>
    <string-array name="tipo_acesso">
        <item>Aluno</item>
        <item>Professor</item>
        <item>Responsavel</item>
    </string-array>
    <string name="title_activity_teste">Teste</string>

    <string name="title_activity_sobre">Sobre</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_perfil">Perfil</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

    <string-array name="title_tab_horarios">
        <item>Seg</item>
        <item>Ter</item>
        <item>Qua</item>
        <item>Qui</item>
        <item>Sex</item>
    </string-array>
    <string-array name="title_tab_medico">
        <item>Historico</item>
        <item>Medicamentos</item>
        <item>Alimentos</item>
    </string-array>
    <string-array name="title_tab_nutri">
        <item>Proteinas</item>
        <item>Vegetais</item>
        <item>Bebidas</item>
    </string-array>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Portal Educando</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login (Obrigatorio)</string>
    <string name="prompt_password">Senha (Obrigatorio)</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
</resources>
