<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.exit.portaleducando.LoginPortalEducando"
    >
    <ImageView
        android:layout_width="225dp"
        android:layout_height="130dp"
        android:layout_marginLeft="60dp"
        android:src="@drawable/portedulogo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginLeft="40dp"
        android:text="@string/app_name"
        android:textSize="35dp"
        android:textColor="#08213A"
        android:id="@+id/textview_logo1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:layout_marginLeft="69dp"
        android:text="@string/sub_titulo"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="@android:color/holo_blue_light"
        android:id="@+id/textviewe_logo2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_vertical"
        android:textColor="#08213A"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:id="@+id/editText"
        android:layout_alignBottom="@+id/textView"
        android:hint="@string/hint_login"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/senha"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="25dp"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#08213A"/>

   <EditText
       android:layout_width="300dp"
       android:layout_height="wrap_content"
       android:layout_marginLeft="60dp"
       android:layout_marginTop="290dp"
       android:id="@+id/editText3"
       android:inputType="textPassword"
       />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textStyle="bold"
        android:textSize="25dp"
        android:layout_marginTop="345dp"
        android:textColor="@android:color/background_light"
        android:background="#08213A"
        android:id="@+id/button_entrar" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="45dp"
        android:text="@string/info_conectado"
        android:textColor="#08213A"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/check_conectado"
        android:layout_below="@+id/button_entrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
